--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,12 @@ h1{
 .ContenidosPaginas{
     width: 100%;
    min-height: 90vh;
+   /*
+   background-image: url("./imagenes/portada.jpeg");
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: center;
+   */
 }
 
 
