--- a/src/stylesheets/Inicio.css
+++ b/src/stylesheets/Inicio.css
@@ -1,7 +1,46 @@
+
+.paginaInicio{
+
+	width: 100%;
+	height: 100vh;
+	background-color: #FEF9E7;
+ 	display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items:center; 	
+
+}
+
+.imagenPortada{
+	height:100%;
+
+}
+
+/*
+
 .paginaInicio{
 	background-image: url("../imagenes/portada.jpeg");
 	height:100vh;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
+}
+
+*/
+
+@media screen and (max-width: 480px) { /* pantalla hasta 480px */
+.paginaInicio{
+
+	width: 100%;
+ 	display: block;
+ 		overflow: hidden;
+
+
+
+}
+.imagenPortada{
+	height: 100%;
+	margin-left: -70%;
+}
+
 }
